service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  labels:
    app: bitwarden
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: websocket
    protocol: TCP
    port: 3012
    targetPort: 3012
  type: ClusterIP
  selector:
    app: bitwarden
    component: bitwarden
